--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@testing-library/react": "16.1.0",
     "@types/jest": "^30.0.0",
     "@types/node": "20.19.9",
+    "@types/node-fetch": "^2.6.13",
     "@types/nodemailer": "^7.0.2",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
